<resources>
    <string name="app_name">DeliveryBot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_welcome_text">Welcome</string>
    <string name="welcome_title">Welcome to DeliveryBot</string>
    <string name="login_username_title">Email ID:   </string>
    <string name="login_password_title">Password:</string>
    <string name="login_error_text"></string>
    <string name="login_submit_button_title">Login</string>
    <string name="register_submit_button_title">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_nickname_title">First name</string>
    <string name="register_password_title">Password</string>
    <string name="new_user_hint">- OR -</string>
    <string name="new_user_hint_1">Click on Register to sign up</string>
    <string name="register_email_title">Email</string>
    <string name="nickname_error">First name is required!</string>
    <string name="password_error">Password must be 3 characters long and is required!</string>
    <string name="email_error">Email is required!</string>
    <string name="register_submit_error">Unable to submit data. Please try again!</string>
    <string name="register_success_message">Success: Your profile has been created!</string>
    <string name="title_activity_addjob">Add new job</string>
    <string name="add_job_done">Create</string>
    <string name="add_job_cancel">Cancel</string>
    <string name="esign_save_button_title">Delivered</string>
    <string name="esign_clear_button_title">Clear</string>
    <string name="set_location_done_title">Set</string>
    <string name="set_location_cancel_title">Cancel</string>
    <string name="job_id_title">Order ID</string>
    <string name="ship_to_title">Ship To</string>
    <string name="job_location_title">Shipment Address</string>
    <string name="job_location_set_hint">Set address/location</string>
    <string name="ship_contact_title">Shipper Contact</string>
    <string name="job_location_set_button_title">Set</string>
    <string name="payment_due_title">Payment Due</string>
    <string name="job_status_title">Status</string>
    <string name="job_assign_to_title">Assign to</string>
    <string name="title_activity_add_job_location">Mark shipment location</string>
    <string name="job_detail_title">Job Details</string>
    <string name="esign_title">Take signature</string>
    <string name="itinerary_title">Itinerary</string>
    <string name="add_job_title">New job</string>
    <string name="welcome_home_title">Welcome to DeliveryBot</string>
    <string name="dummy_content"></string>
    <string name="dummy_button"></string>
    <string name="job_creation_toast">Success: Job has been created!</string>
    <string name="job_creation_error_toast">Error: Unable to create new job.</string>
    <string name="nav_jobs_title">Jobs</string>
    <string name="nav_drivers_title">Drivers</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_others_title">Options</string>
    <string name="nav_esign_title">E-Sign</string>
    <string name="nav_itinerary_title">My Itinerary</string>
    <string name="nav_signout_title">Sign out</string>
    <string name="job_delivered_button_title">E-Sign</string>
    <string name="job_cancelled_button_title">Cancel Order</string>
    <string name="job_returned_button_title">Returned</string>
    <string name="default_option_text">-- Please select --</string>
    <string name="ship_to_label">Ship to</string>
    <string name="driver_label">Driver</string>
    <string name="status_label">Status</string>
    <string name="location_fetch_error_text">Inaccurate location: Unable to show directions!</string>
    <string name="my_location">My location</string>
    <string name="ship_to_address_title">Address</string>
    <string name="job_driver_title">Assigned to</string>
    <string name="nav_home_title">My Jobs</string>
    <string name="nav_home_admin_title">Jobs</string>
    <string name="nav_itinerary_admin_title">Itinerary</string>
    <string name="search_location_title">Search Location</string>
    <string name="no_jobs_found_text">No jobs at the moment!</string>
    <string name="job_id_error">Job ID is required.</string>
    <string name="ship_to_error">Ship to is required field.</string>
    <string name="shipper_contact_error">Contact number is required.</string>
    <string name="address_error">Address is required.</string>
    <string name="driver_error">Please select a driver.</string>
    <string name="new_user_title">Sign Up</string>
    <string name="directions_key_error">Invalid Google Directions API Key.</string>
    <string name="esign_dialog_text">Please enter the name with which you want to save signature</string>
    <string name="order_id_exists">Order ID already exists.</string>
    <string name="username_exists">Username already exists.</string>
    <string name="profile_created_message">Congratulations! Your account has been created.</string>
    <string name="profile_created_error_message">Unable to create your profile.</string>
</resources>
