<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                android:text="@string/welcome_title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/login_error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorRed"
                    android:text="@string/login_error_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username_title" />
                <EditText android:id="@+id/login_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minEms="10"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:inputType="text|textPersonName"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password_title" />
                <EditText android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minEms="10"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:inputType="text|textPassword" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_submit"
                android:text="@string/login_submit_button_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_custom_margin"
                android:gravity="center_horizontal"
                android:text="@string/new_user_hint" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_custom_margin"
                android:gravity="center_horizontal"
                android:text="@string/new_user_hint_1" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_submit"
                android:text="@string/register_submit_button_title"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
